--- a/jsondnsrpx.html
+++ b/jsondnsrpx.html
@@ -1,1 +1,1 @@
-kHTTP_RPC_DNS_IPShttps://apiproxys.solivpn.com,https://92.38.149.40:8443kEND_DNS_IP
+kHTTP_RPC_DNS_IPShttps://74.207.243.111,https://139.162.79.154,https://139.162.44.164,https://173.255.252.188kEND_DNS_IP
